refactor:add redis api